--- a/examples/MethodComparison.ipynb
+++ b/examples/MethodComparison.ipynb
@@ -279,7 +279,7 @@
     "The next step is to integrate the signal under the remaining edge ($I_m$). The interval regions [$E_1$, $E_2$] over which to integrate are selected by the user could be described by following function.\n",
     "$$I_m =   \\int_{E_1}^{E_2} S(E) - bg(E) dE$$\n",
     "To get an estimate on the real abundance, this value should be compared to the theoretical cross section. This cross section is calculated by using the atomic GOS ($\\sigma_A$) and the experimental parameters; acceleration voltage, convergence angle, collection angle and low loss. The expected intensity ($I_e$) is then calculated by integrating the theoretical edge over the same interval.\n",
-    "$$I_e = \\int_{E_1}^{E_2} ZLP(E) \\ast \\sigma_A(E, E0, \\alpha, \\beta) dE  $$\n",
+    "$$I_e = \\int_{E_1}^{E_2} ZLP(E) \\ast \\sigma_A(E, E_0, \\alpha, \\beta) dE  $$\n",
     "The resulting abundance is the ratio of measured intensity over expected intensity $I_m/I_e$.\n"
    ]
   },
