--- a/examples/CeriumOxidationState.ipynb
+++ b/examples/CeriumOxidationState.ipynb
@@ -156,17 +156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "458684aa-192b-462a-bcf1-6da331a8a065",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2749a4531c0>"
+       "<matplotlib.legend.Legend at 0x22511f62440>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ab23ec65-9687-4a5c-8951-4f679c1d179f",
    "metadata": {},
    "outputs": [],
@@ -195,10 +195,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "203f7d52-69c3-4db4-acea-df4e402e27ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "16384it [00:14, 1146.06it/s]\n",
+      "16384it [01:13, 222.49it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "settings = (300e3, 1e-9, 20e-3) #E0, convergence angle, collection angle\n",
     "msh = em.MultiSpectrumshape(0.05, 840, 4096, xsize, ysize)\n",
@@ -218,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "96c0a355-1e4f-4b9d-be5c-01cd75da5932",
    "metadata": {},
    "outputs": [],
@@ -238,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "804c90b9-d452-4c36-89b7-700ec98f84f3",
    "metadata": {},
    "outputs": [],
@@ -248,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b5c6c629-d5c8-4e60-87bf-702d500a7e3c",
    "metadata": {},
    "outputs": [],
@@ -268,27 +277,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "20381977-00f8-4f59-ae07-47f4bb996694",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the shape is drawn, this will be used to determine the average spectrum\n"
+     ]
+    }
+   ],
    "source": [
     "exp.define_new_region(max_points=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f956b177-ea96-4826-898e-24ea0dcaf4fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the shape is drawn, this will be used to determine the average spectrum\n"
+     ]
+    }
+   ],
    "source": [
     "exp.define_new_region(max_points=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "cf3f5465-5cd2-419c-bb3b-bfca20c16f27",
    "metadata": {},
    "outputs": [],
@@ -338,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "691e781d-fff9-48d0-a23f-7e8f39b850c1",
    "metadata": {},
    "outputs": [],
@@ -356,10 +381,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "59410171-118f-4105-89ec-a8e40e91973e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1;31mSignature:\u001b[0m \u001b[0mexp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextract_edge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0melements\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0medges\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mintervals\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpre_fine\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+       "\u001b[1;31mDocstring:\u001b[0m\n",
+       "Fits the average spectrum indicated by index using the elements and\n",
+       "edges. The interval indicates the energy region over which to fit\n",
+       "the fine structure. Pre_fine is used to modify the start position\n",
+       "of the fine structure with respect to the atomic cross section. The\n",
+       "sampling of the fine structure is determined by the fwhm of the zlp.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "index: int\n",
+       "    The index of the chosen area. The first area selected has index 0\n",
+       "    and so forth. The show_regions() function also shows which area\n",
+       "    corresponds to which index.\n",
+       "elements: list\n",
+       "    List of elements which are present in the spectrum of index\n",
+       "edges: list\n",
+       "    List of edge of the elements. The length of this list should be\n",
+       "    equal to the elements list.\n",
+       "intervals: list\n",
+       "    List of energy intervals [eV] over which to fit the fine structure.\n",
+       "pre_fine: list\n",
+       "    List of energies onset energy with respect to the onset energy\n",
+       "    of the atomic cross section. Hence a positive value indicates\n",
+       "    that the fine structure starts before expected onset from the\n",
+       "    atomic cross section. Negative values would be unexpected.\n",
+       "\u001b[1;31mFile:\u001b[0m      c:\\users\\djannis\\pycharmprojects\\project\\pyeelsmodel\\pyeelsmodel\\operators\\quantification\\extract_experimental_edge.py\n",
+       "\u001b[1;31mType:\u001b[0m      method"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#to show the docstrings of the function. \n",
     "exp.extract_edge?"
@@ -367,10 +429,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "168c5c22-06f0-4d64-8180-916fceb1318b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cannot use analytical gradients since a convolutor is inside model\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.29999999999999893\n",
+      "116\n",
+      "<pyEELSMODEL.components.CLedge.zezhong_coreloss_edgecombined.ZezhongCoreLossEdgeCombined object at 0x0000022510583670>\n",
+      "True\n",
+      "here\n"
+     ]
+    }
+   ],
    "source": [
     "fixs0 = exp.extract_edge(index=0, elements=['Ce'], edges=['M'], intervals=[35], pre_fine=[5])\n",
     "fixs0[0].setname('Ce 3+')"
@@ -378,12 +459,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e0203ce2-5d95-48d3-9456-42a90d6d6b37",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cannot use analytical gradients since a convolutor is inside model\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.29999999999999893\n",
+      "116\n",
+      "<pyEELSMODEL.components.CLedge.zezhong_coreloss_edgecombined.ZezhongCoreLossEdgeCombined object at 0x0000022510507A00>\n",
+      "True\n",
+      "here\n"
+     ]
+    }
+   ],
    "source": [
     "fixs1 = exp.extract_edge(index=1, elements=['Ce'], edges=['M'], intervals=[35], pre_fine=[5])\n",
     "fixs1[0].setname('Ce 4+')"
@@ -399,10 +499,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "e3ad6633-e637-4479-85e5-19ed43313baa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x22514217e20>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fig, ax = plt.subplots()\n",
     "ax.plot(fixs0[0].energy_axis, fixs0[0].data/fixs0[0].integrate((950,1000)), label='Ce3+', color='blue')\n",
@@ -435,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "1e5e31ac-7c4a-43c6-81e3-0e27985dbf5b",
    "metadata": {},
    "outputs": [],
@@ -446,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "05649e81-4ea4-4460-a4f9-e45c4e4b3a77",
    "metadata": {},
    "outputs": [],
@@ -457,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "6ea3e7bc-9421-42c8-8516-3bed2e2f2642",
    "metadata": {},
    "outputs": [],
@@ -467,10 +578,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "4866d13c-ad6a-4d3e-a0ea-84d7675f24dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pyEELSMODEL.components.fixedpattern.FixedPattern at 0x22514453e20>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#the reference should be a FixedPattern object. \n",
     "refs[0]"
@@ -478,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "89ec0203-8c71-457e-bf11-478c4ba80b72",
    "metadata": {},
    "outputs": [],
@@ -488,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "6d1c5f76-ecf3-4e99-9522-b3ad725fab7b",
    "metadata": {},
    "outputs": [],
@@ -507,10 +629,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "9202c5f0-9812-4c9b-bf03-ca4998b65f81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cannot use analytical gradients since a convolutor is inside model\n",
+      "16384it [00:28, 576.06it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "fit = em.LinearFitter(hl, mod, use_weights=True)\n",
     "fit.multi_fit()"
@@ -518,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "85b51677-585a-47eb-9bef-cf347b23afdf",
    "metadata": {},
    "outputs": [],
@@ -528,10 +659,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "fae08cc5-6e5e-4ecd-b10e-7273a0c22caa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\DJannis\\AppData\\Local\\Temp\\ipykernel_25264\\1042502816.py:10: RuntimeWarning: invalid value encountered in divide\n",
+      "  sim_ce3 = maps[0]/(maps[0]+maps[1]) #ground truth\n",
+      "C:\\Users\\DJannis\\AppData\\Local\\Temp\\ipykernel_25264\\1042502816.py:11: RuntimeWarning: invalid value encountered in divide\n",
+      "  sim_ce4 = maps[1]/(maps[0]+maps[1]) #ground truth\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "sum_ce = (exp_maps[0]+exp_maps[1])\n",
@@ -557,10 +699,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "b6a9accb-8fa2-44c0-8ba8-5f8742d00366",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x2250f448f70>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fig, ax = plt.subplots(2,2)\n",
     "cmp = 'jet'\n",
@@ -584,10 +737,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "58fab7d7-82ee-475e-96e0-f29950d0b7e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "16384it [00:17, 946.33it/s]\n",
+      "16384it [00:17, 948.46it/s]\n",
+      "16384it [00:18, 905.17it/s]\n",
+      "16384it [00:17, 962.24it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "multimodels = []\n",
     "multimodels.append(fit.model_to_multispectrum_with_comps([bg])) #only background\n",
@@ -598,13 +762,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "99522f1a-1456-4a8f-ad5a-6ee8d952d8c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x225102d1d50>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "em.MultiSpectrumVisualizer([hl]+multimodels, labels=['Exp', 'Bg', 'Ce3', 'Ce4', 'full'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4834890-d7b4-483b-bb1f-28f795ea3f43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
