update docstrings and html code

--- a/doc/CorelossExample.ipynb
+++ b/doc/CorelossExample.ipynb
@@ -532,7 +532,7 @@
    "metadata": {},
    "source": [
     "### ElementalQuantification class\n",
-    "The last part shows how the ElementalQuantification class is used as workflow to get the same result. "
+    "The last part shows how the ElementalQuantification class is used as workflow to get the same result. The workflow used in this example is similar to what is used in the ElementalQuantification class but this class gives some other attributes with which you can vary the workflow. For more information see the documentation or the other notebook ()"
    ]
   },
   {
