--- a/examples/CorelossExampleExtended.ipynb
+++ b/examples/CorelossExampleExtended.ipynb
@@ -5,8 +5,8 @@
    "id": "9f9d6fc7-af39-42ca-8e85-a83957bf0946",
    "metadata": {},
    "source": [
-    "# Coreloss Example\n",
-    "In this notebook, a typical workflow of EELS processing is shown on simulated data. This notebook shows one example of how core-loss quantification could be performed "
+    "# Coreloss Example Extended\n",
+    "In this notebook, a typical workflow of EELS processing is shown on simulated data. This notebook shows one example of how core-loss quantification could be performed. This notebook is very similar to the *CorelossExample* notebook with the difference being in the simulation of the multispectrum which is explained in this notebook."
    ]
   },
   {
@@ -37,31 +37,215 @@
    "id": "917c7b16-a202-49f2-bc0c-d910185964b6",
    "metadata": {},
    "source": [
-    "## STEM-EELS Simulation\n",
+    "## Simulation core-loss\n",
     "In this section , the core-loss signal will be simulated. This step is in general not needed since we get the experimental data instead of simulating it.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "181bbd08-faf4-4d88-b996-d5a685806239",
+   "execution_count": 3,
+   "id": "726cf8f3-c284-4bcb-9230-9c337ea9364b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#functions to make easy mask to make elemental maps\n",
+    "def make_circular_mask(xco, yco, Rin, Rout, shape):\n",
+    "    XX, YY = np.meshgrid(np.arange(shape[1])-yco, np.arange(shape[0])-xco)\n",
+    "    R = np.sqrt(XX**2+YY**2)\n",
+    "    \n",
+    "    mask = np.zeros(shape)\n",
+    "    boolean = (R>=Rin) & (R<Rout)\n",
+    "    mask[boolean] = 1\n",
+    "    return mask\n",
+    "\n",
+    "def make_rectangular_mask(xco, yco, width,height, shape):\n",
+    "    mask = np.zeros(shape)\n",
+    "    mask[xco:xco+width, yco:yco+height] = 1\n",
+    "    return mask"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e68a0bdd-e2f8-45d7-ac19-f1d43696e695",
+   "metadata": {},
+   "source": [
+    "#### Elemental abundance maps\n",
+    "Define the elements and the eges used. Add the atomic numbers since they will be used to have some estimate on the free mean path. \\\n",
+    "Different masks are defined to showcase an elemental abundance at each position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8b8e94ae-a79a-4046-84c7-7016daec97b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elements = ['C', 'N', 'O', 'Fe']\n",
+    "edges = ['K', 'K', 'K', 'L']\n",
+    "Zs = [6, 7, 8, 26] #atomic weights\n",
+    "\n",
+    "#scan size elemental map\n",
+    "xsize = 128\n",
+    "ysize = 128\n",
+    "maps = np.zeros((len(elements),xsize,ysize))\n",
+    "\n",
+    "#masks which define different regions. \n",
+    "mask0 =make_rectangular_mask(5, 5, 20, 20, (xsize,ysize))\n",
+    "mask1 =  make_rectangular_mask(90, 90, 20, 30, (xsize,ysize))\n",
+    "mask2 = make_circular_mask(xsize//2, ysize//2, 20, 30, (xsize,ysize))\n",
+    "mask3 = make_circular_mask(xsize//2, ysize//2, 0, 20, (xsize,ysize))\n",
+    "\n",
+    "#attribute different elemental values for different masks\n",
+    "maps[0] = 1  #carbon elemental map\n",
+    "maps[1] = 2*mask0 + mask1 #nitrogen elemental map\n",
+    "maps[2] = mask2 #oxygen elemental map\n",
+    "maps[3] = mask3+0.5*mask2 #iron elemental map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "70d20fd4-7b0c-4b5a-ae99-2f73cbc1d4b4",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "from pyEELSMODEL.misc.data_simulator import simulate_data"
+    "#shows the real truth elemental abundance\n",
+    "fig, ax = plt.subplots(1,len(elements))\n",
+    "for ii in range(maps.shape[0]):\n",
+    "    ax[ii].imshow(maps[ii], cmap='gray')\n",
+    "    ax[ii].set_title(elements[ii])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ad57b31-85c4-4cff-b1c1-c1a487eb3a45",
+   "metadata": {},
+   "source": [
+    "#### t/&lambda;\n",
+    "Calculate some measure of inelastic mean free path to include this into the simulated data. Since a change in inelastic mean free path modfies the multiple scattering which then changes the shape of background and core loss edge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "22b0e9ad-3682-4221-8324-8028e8de4f49",
+   "execution_count": 6,
+   "id": "eade1a02-2a12-4e01-a1f3-09624b234722",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hl, ll = simulate_data()"
+    "adf = np.zeros((xsize, ysize))\n",
+    "tlambda_map = np.zeros_like(adf)\n",
+    "for ii in range(maps.shape[0]):\n",
+    "    adf += (Zs[ii]*maps[ii])**2\n",
+    "    tlambda_map += Zs[ii]*maps[ii]\n",
+    "    \n",
+    "tlambda_map = tlambda_map/tlambda_map.max() #maximum t/lambda is 1 for this sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "730929e9-81c5-4773-9625-95844eb245cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Text(0.5, 1.0, 'mean free path')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#shows adf and mean-free path figure\n",
+    "fig, ax = plt.subplots(1,2)\n",
+    "ax[0].imshow(adf, cmap='gray')\n",
+    "ax[0].set_title(r'ADF like contrast')\n",
+    "ax[1].imshow(tlambda_map, cmap='gray')\n",
+    "ax[1].set_title('mean free path')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8324b46-c0d5-40ee-8fd6-f2383918ac42",
+   "metadata": {},
+   "source": [
+    "#### Simulation part\n",
+    "CoreLossSimulator is an object which simulates a core loss multispectrum from the given elements, maps, t/&lambda; and the settings.\\\n",
+    "Here is a small description on how the multispectrum gets simulated:\n",
+    "1. Calculate a low loss which contains a zero-loss (Gaussian) with a FWHM (1eV) and the low loss. The low loss only uses the bulk plasmons, these are calculated using the plasmon energy (22 eV) and t/&lambda;. In this simulation the only variying parameter in the low loss is the t/&lambda; . This is done to showcase the influence of multiple scattering on the core-loss spectra.\n",
+    "2. The background is calculated by starting with a powerlaw (A E<sup>-3</sup>) which gets convolved with the low loss at each probe position.\n",
+    "3. The core loss edges are calculated using the E0, alpha, beta and GOS tables available. The calculated shape then gets convolved with the low loss to thake the multiple scattering into account. The GOS tables used are the one calculated by [Zhang Zezhong](https://zenodo.org/records/7729585)\n",
+    "4. Poisson noise is added to the core-loss.\n",
+    "5. To emulate the effect of instabilities in the spectrometer, both the low loss and core loss are shifted at each probe position."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "29068205-96af-474b-9f0c-1fc98eeccb31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E0 = 300e3 #acceleration voltage [V]\n",
+    "alpha = 1e-9 #convergence angle [rad]\n",
+    "beta = 20e-3 #collection angle [rad]\n",
+    "\n",
+    "dispersion = 0.5 #[eV]\n",
+    "offset = 200 #[eV]\n",
+    "size = 2048 #number of pixel used in simulation [eV]\n",
+    "\n",
+    "settings = (E0, alpha, beta)\n",
+    "msh = em.MultiSpectrumshape(dispersion, offset, size, xsize, ysize)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "181bbd08-faf4-4d88-b996-d5a685806239",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "16384it [00:12, 1278.41it/s]\n",
+      "16384it [00:37, 431.62it/s]\n",
+      "16384it [00:00, 34154.28it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multispectrum is simulated\n"
+     ]
+    }
+   ],
+   "source": [
+    "sim = em.CoreLossSimulator(msh, elements, edges, maps, tlambda_map, settings)\n",
+    "sim.use_shift = True #add shift which experimentally arises due to instabilities\n",
+    "sim.simulate_multispectrum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d57d6ae0-95a2-4830-9340-15ab37156a25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#redefine the multispectra for easy use\n",
+    "hl = sim.multispectrum\n",
+    "ll = sim.ll"
    ]
   },
   {
