--- a/examples/MethodComparison.ipynb
+++ b/examples/MethodComparison.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "id": "f537de29-1030-418b-bf81-67a180160bd4",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "483646b4-a3d4-474f-87c4-24a2673263f6",
    "metadata": {},
    "outputs": [],
@@ -220,8 +220,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [00:12, 1278.81it/s]\n",
-      "16384it [00:37, 431.24it/s]"
+      "16384it [00:13, 1202.08it/s]\n",
+      "16384it [00:36, 443.36it/s]"
      ]
     },
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "4440ef30-6a4d-4ddd-abb1-3377b3b40d30",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
     "These values will be given as starting parameters for the non-linear fit. Note, other methods can be used to estimate the starting values of the power-law but are not used at this point. \\\n",
     "The next step is to integrate the signal under the remaining edge ($I_m$). The interval regions [$E_1$, $E_2$] over which to integrate are selected by the user could be described by following function.\n",
     "$$I_m =   \\int_{E_1}^{E_2} S(E) - bg(E) dE$$\n",
-    "To get an estimate on the real abundance, this value should be compared to the theoretical cross section. This cross section is calculated by using the atomic GOS ($\\sigma_A$) and the experimental parameters; acceleration voltage, convergence angle, collection angle and low loss. The expected intensity ($I_e$) is then calculated by integrating the theoretical edge over the same interval.\n",
+    "To get an estimate on the real abundance, this value should be compared to the theoretical cross section. This cross section is calculated by using the atomic GOS ($\\sigma_A$) and the experimental parameters; acceleration voltage, convergence angle, collection angle and low loss (ZLP). The expected intensity ($I_e$) is then calculated by integrating the theoretical edge over the same interval.\n",
     "$$I_e = \\int_{E_1}^{E_2} ZLP(E) \\ast \\sigma_A(E, E_0, \\alpha, \\beta) dE  $$\n",
     "The resulting abundance is the ratio of measured intensity over expected intensity $I_m/I_e$.\n"
    ]
@@ -300,10 +300,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [00:02, 6569.45it/s]\n",
-      "16384it [00:36, 449.32it/s]\n",
-      "16384it [00:01, 14034.97it/s]\n",
-      "16384it [00:09, 1753.04it/s]\n"
+      "16384it [00:02, 6751.95it/s]\n",
+      "16384it [00:33, 481.93it/s]\n",
+      "16384it [00:01, 14100.49it/s]\n",
+      "16384it [00:08, 1832.40it/s]\n"
      ]
     },
     {
@@ -317,10 +317,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [00:02, 6599.85it/s]\n",
-      "16384it [00:42, 384.47it/s]\n",
-      "16384it [00:01, 13950.92it/s]\n",
-      "16384it [00:09, 1803.16it/s]\n"
+      "16384it [00:02, 6192.05it/s]\n",
+      "16384it [00:40, 406.37it/s]\n",
+      "16384it [00:01, 13454.15it/s]\n",
+      "16384it [00:09, 1798.89it/s]\n"
      ]
     },
     {
@@ -334,10 +334,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [00:02, 6417.00it/s]\n",
-      "16384it [00:44, 364.27it/s]\n",
-      "16384it [00:01, 13469.80it/s]\n",
-      "16384it [00:09, 1704.75it/s]\n"
+      "16384it [00:02, 6731.93it/s]\n",
+      "16384it [00:41, 391.48it/s]\n",
+      "16384it [00:01, 13542.57it/s]\n",
+      "16384it [00:09, 1819.19it/s]\n"
      ]
     },
     {
@@ -351,10 +351,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [00:02, 6105.03it/s]\n",
-      "16384it [00:53, 304.15it/s]\n",
-      "16384it [00:01, 13496.58it/s]\n",
-      "16384it [00:09, 1664.49it/s]\n"
+      "16384it [00:02, 6675.14it/s]\n",
+      "16384it [00:52, 312.08it/s]\n",
+      "16384it [00:01, 14260.09it/s]\n",
+      "16384it [00:09, 1709.24it/s]\n"
      ]
     }
    ],
@@ -437,8 +437,8 @@
      "output_type": "stream",
      "text": [
       "cannot use analytical gradients since a convolutor is inside model\n",
-      "16384it [12:13, 22.34it/s]\n",
-      "16384it [00:07, 2175.55it/s]\n"
+      "16384it [12:20, 22.12it/s]\n",
+      "16384it [00:07, 2158.95it/s]\n"
      ]
     }
    ],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "e3c94c71-1660-4acf-b0de-1c0b70d06a87",
    "metadata": {},
    "outputs": [
@@ -477,8 +477,8 @@
      "output_type": "stream",
      "text": [
       "cannot use analytical gradients since a convolutor is inside model\n",
-      "16384it [00:31, 520.73it/s]\n",
-      "16384it [00:11, 1415.99it/s]\n"
+      "16384it [00:32, 502.75it/s]\n",
+      "16384it [00:11, 1430.99it/s]\n"
      ]
     }
    ],
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "id": "f3bbdd58-6c41-4511-a34b-ac6054b9876a",
    "metadata": {},
    "outputs": [
@@ -517,16 +517,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [00:10, 1616.24it/s]\n",
-      "16384it [00:10, 1561.36it/s]\n",
-      "16384it [00:10, 1628.16it/s]\n",
-      "16384it [00:10, 1617.61it/s]\n",
-      "16384it [00:10, 1626.72it/s]\n",
-      "16384it [00:07, 2153.02it/s]\n",
-      "16384it [00:07, 2149.33it/s]\n",
-      "16384it [00:08, 1965.74it/s]\n",
-      "16384it [00:07, 2118.95it/s]\n",
-      "16384it [00:07, 2132.84it/s]\n"
+      "16384it [00:10, 1551.52it/s]\n",
+      "16384it [00:11, 1480.35it/s]\n",
+      "16384it [00:12, 1298.72it/s]\n",
+      "16384it [00:10, 1517.68it/s]\n",
+      "16384it [00:12, 1332.25it/s]\n",
+      "16384it [00:08, 2004.58it/s]\n",
+      "16384it [00:07, 2082.30it/s]\n",
+      "16384it [00:07, 2109.07it/s]\n",
+      "16384it [00:07, 2074.78it/s]\n",
+      "16384it [00:08, 2016.88it/s]\n"
      ]
     }
    ],
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "098bcb3f-b2e6-47b3-b2fc-149b1fc635c4",
    "metadata": {},
    "outputs": [
@@ -580,10 +580,10 @@
     {
      "data": {
       "text/plain": [
-       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x213038a82b0>"
+       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x2444846d180>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,17 +595,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "id": "4a9293bb-5734-42fe-ad14-d248d04d8ed1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x21305557e20>"
+       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x2445b0aea10>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
