add database directory

--- a/examples/CalibrateSpectra.ipynb
+++ b/examples/CalibrateSpectra.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "id": "bbdd58ed-724b-4fac-94c9-adac9fc90783",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "id": "36d4d47c-b390-459d-b8cd-c2776fc2ffab",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "id": "bb52d1f6-e9bd-4cd5-9630-691a1de35958",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "id": "8ec92480-9b5c-4d38-8a25-f6a0782e0191",
    "metadata": {},
    "outputs": [
@@ -59,9 +59,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [00:13, 1215.47it/s]\n",
-      "16384it [00:38, 430.70it/s]\n",
-      "16384it [00:00, 37349.86it/s]\n"
+      "16384it [00:13, 1249.14it/s]\n",
+      "16384it [00:37, 439.34it/s]\n",
+      "16384it [00:00, 36913.31it/s]\n"
      ]
     },
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "id": "b466ebde-7d99-44d6-80cb-dd5540c846c0",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "id": "90d53671-5c00-4883-b54f-d5ea016a9e2b",
    "metadata": {},
    "outputs": [],
@@ -110,13 +110,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "id": "e14c27fe-a2df-47c1-806b-be256a2e0cee",
    "metadata": {},
    "outputs": [],
    "source": [
     "hl_al = fast_align.aligned_others[0]\n",
     "ll_al = fast_align.aligned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "87eeca74-5eed-47b7-a854-918dd3be35f6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x28c6d4c0fa0>"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\djannis\\pycharmprojects\\project\\pyeelsmodel\\pyEELSMODEL\\operators\\multispectrumvisualizer.py:265: UserWarning: Attempt to set non-positive ylim on a log-scaled axis will be ignored.\n",
+      "  ax[1].set_ylim([miny, maxy])\n"
+     ]
+    }
+   ],
+   "source": [
+    "em.MultiSpectrumVisualizer([ll_al, hl_al], logscale=True)"
    ]
   },
   {
@@ -130,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 67,
    "id": "d2fa61f3-46aa-4075-857b-2a5ce4927fa6",
    "metadata": {},
    "outputs": [],
@@ -150,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 68,
    "id": "0a7c0e8f-13c9-46ac-a9f9-aadb582c1d48",
    "metadata": {},
    "outputs": [],
@@ -168,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "id": "ad6863d9-1c2b-4e36-a7d1-c166bb3c3394",
    "metadata": {},
    "outputs": [
@@ -176,11 +214,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Energy of C K1 is:284.174602224911\n",
-      "Energy of N K1 is:403.5955056419095\n",
-      "Energy of O K1 is:534.9006627834328\n",
-      "Energy of Fe L3 is:712.150902005906\n",
-      "Energy of Fe L2 is:725.4287855870457\n"
+      "Energy of C K1 is:280.8971129032258\n",
+      "Energy of N K1 is:402.8998119797086\n",
+      "Energy of O K1 is:712.0051284448323\n",
+      "Energy of Fe L3 is:726.3489380098016\n",
+      "Energy of Fe L2 is:533.6919921890734\n"
      ]
     }
    ],
