--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3f3a2bbe-6c0c-4670-bbc6-bc83b09fc70e",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "84833729-c814-4d01-978d-83715d94680d",
    "metadata": {},
    "outputs": [],
@@ -54,20 +54,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "15090810-23af-4a78-a2be-3e617dfb60d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1;31mSignature:\u001b[0m \u001b[0mem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSpectrum\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflip_sign\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+       "\u001b[1;31mDocstring:\u001b[0m\n",
+       "Loads different types of data. The possible datatypes are: .hdf5,\n",
+       ".hspy, .dm3/.dm4 and .msa.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "filename : string\n",
+       "   String of the filename where the extention should be '.hdf5'\n",
+       "flip_sign: boolean\n",
+       "    Indicates whether the offset value should be negative when loading\n",
+       "    a .dm file. (default: False)\n",
+       "\n",
+       "Returns\n",
+       "-------\n",
+       "s: Spectrum\n",
+       "    The spectrum which is contained in the filename\n",
+       "\u001b[1;31mFile:\u001b[0m      c:\\users\\djannis\\pycharmprojects\\project\\pyeelsmodel\\pyeelsmodel\\core\\spectrum.py\n",
+       "\u001b[1;31mType:\u001b[0m      method"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "em.Spectrum.load?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "eda0afc9-7467-403d-bebb-4f6d9d1861d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "this will change the size and contents of the current spectrum\n"
+     ]
+    }
+   ],
    "source": [
     "filename = os.path.join('data', 'hl.msa')\n",
     "s = em.Spectrum.load(filename)"
@@ -75,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7b57631b-8357-4343-9bc8-e0f1e1e97ec8",
    "metadata": {},
    "outputs": [],
@@ -93,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1d9b6dc5-de50-487c-bd96-d029477ad72a",
    "metadata": {},
    "outputs": [],
@@ -109,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e2cde318-dfb5-4861-b798-f4b1cdb2b027",
    "metadata": {},
    "outputs": [],
@@ -127,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "db577825-304a-472c-99cb-e9bf3f5a4638",
    "metadata": {},
    "outputs": [],
@@ -139,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a43871d2-098b-4c0d-b69f-bc245df812e2",
    "metadata": {},
    "outputs": [],
@@ -158,10 +194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2d14a21d-3300-4579-b10a-d4cb97a35b15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "savename = r'.\\data\\hl_test.hdf5'\n",
     "s.save_hdf5(savename)"
@@ -169,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c953c4e1-a371-4f26-ac5f-1b8b58013ef0",
    "metadata": {},
    "outputs": [],
@@ -179,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b92bc9c9-31b3-4b97-bd29-56c241cb7401",
    "metadata": {},
    "outputs": [],
@@ -197,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "3cd946f0-d03b-4d34-b1ef-ae39f0f25a27",
    "metadata": {},
    "outputs": [],
@@ -208,10 +255,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "176d53c9-1e80-4633-9bd4-0c431187b419",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current spectrum id is: (0, 0)\n"
+     ]
+    }
+   ],
    "source": [
     "#shows the current selected spectrum\n",
     "print('current spectrum id is: ' + str(s.currentspectrumid))\n",
@@ -220,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "831e3513-c3e5-4c7f-91d0-4a34c7624d3e",
    "metadata": {},
    "outputs": [],
@@ -230,10 +285,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d1f90fa7-1db6-448e-b7f0-28a350cb93a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current spectrum id is: (2, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "print('current spectrum id is: ' + str(s.currentspectrumid))\n",
     "s.plot()"
@@ -241,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "971d0a6a-f4e6-44b9-9899-d4cfbb553088",
    "metadata": {},
    "outputs": [],
@@ -260,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "61b7576a-be54-4381-a245-e48ce9e0ddac",
    "metadata": {},
    "outputs": [],
@@ -286,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6d25ad34-5279-4ae0-8c0c-29f49d60525c",
    "metadata": {},
    "outputs": [],
@@ -306,20 +369,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "d541c193-5426-467f-bd2d-75700b2d903a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1;31mSignature:\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave_hdf5\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmetadata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moverwrite\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+       "\u001b[1;31mDocstring:\u001b[0m\n",
+       "Saves the spectrum as a hdf5 file. The structure of the file can easily\n",
+       "be investigated via a hdfview software.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "filename : string\n",
+       "    filename of the saved file.\n",
+       "metadata: dictionary\n",
+       "    A dictionary containing E0, alpha, beta, elements and edges can be\n",
+       "    added to the hdf5 file. If None is given, nothing will be saved.\n",
+       "overwrite: boolean\n",
+       "    Indicates if the file will be overwritten if it already exists.\n",
+       "    (default: False)\n",
+       "Returns\n",
+       "-------\n",
+       "If the file saving workes, a True value is returned.\n",
+       "\u001b[1;31mFile:\u001b[0m      c:\\users\\djannis\\pycharmprojects\\project\\pyeelsmodel\\pyeelsmodel\\core\\multispectrum.py\n",
+       "\u001b[1;31mType:\u001b[0m      method"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "s.save_hdf5?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "bf9a85ed-8412-469f-9c55-456d2edf05a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not overwriting\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "savename = os.path.join('data', 'multi_test.hdf5')\n",
     "s.save_hdf5(savename)"
@@ -337,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "4bc7c9c8-cb6d-43d0-8a14-e4402f46d892",
    "metadata": {},
    "outputs": [],
@@ -347,12 +457,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "efaf55fb-3d4d-4db1-b7d3-5c4065e66629",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "16384it [00:13, 1216.67it/s]\n",
+      "16384it [00:37, 439.14it/s]\n",
+      "16384it [00:00, 38290.51it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multispectrum is simulated\n"
+     ]
+    }
+   ],
    "source": [
     "hl, ll = simulate_data()"
    ]
@@ -372,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "8c2abcb4-6f18-42a4-8998-a9a40281d4c3",
    "metadata": {},
    "outputs": [],
@@ -384,12 +511,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "5f285a7e-dbe9-4a50-a228-6226b792d8d1",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start using FastAlignZeroLoss object\n",
+      "Stop using FastAlignZeroLoss object\n",
+      "Start using AlignZeroLoss object\n",
+      "Estimates the parameters for the fitting procedure\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "16384it [00:43, 378.53it/s]\n",
+      "16384it [00:03, 4392.15it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stop using AlignZeroLoss object\n",
+      "Start using AlignCrossCorrelation object\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "16384it [00:08, 2012.52it/s]\n",
+      "16384it [00:03, 4525.90it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stop using AlignCrossCorrelation object\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print('Start using FastAlignZeroLoss object')\n",
     "fast_align.perform_alignment()\n",
@@ -412,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "65c13ff2-2985-4c32-8d7d-fd89a8a85415",
    "metadata": {},
    "outputs": [],
@@ -430,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "8d12caa2-1966-4487-a39c-dcb41a6c2de6",
    "metadata": {},
    "outputs": [],
@@ -440,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "4072e0bb-5ad9-417c-8914-47681f13c3c4",
    "metadata": {},
    "outputs": [],
@@ -453,9 +629,7 @@
   {
    "cell_type": "markdown",
    "id": "11f2edc8-172f-48b6-8c4a-3f144de34969",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Operations on Spectrum and MultiSpectrum\n",
     "Some simple operations which can be performed on spectra and multispectra are shown"
@@ -662,21 +836,32 @@
     "##### MultiSpectrumVisualizer\n",
     "The em.MultiSpectrumVisualizer object gives the ability to navigate through a MultiSpectrum.\n",
     "\n",
-    "- The arrow on the keyboard are used to change the rectangle position.\n",
+    "- **The arrows** on the keyboard are used to change the rectangle position.\n",
     "  \n",
-    "- '+' key increases the area on which to visualize the spectrum and takes the average.\n",
+    "- **'+' key** increases the area on which to visualize the spectrum and takes the average.\n",
     "  \n",
-    "-  '-' key decreases area\n",
+    "- **'-' key** decreases the area\n",
     "  \n",
-    "-  Mouse can be used to drag rectangle over multispectrum"
+    "-  **Mouse** can be used to drag the rectangle over multispectrum by **left  mouse** clicking inside the rectangle holding it and dragging"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "6ffa9c8b-ff84-4eb7-9af7-c58c2814ac6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x1f7b8572b00>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#shows one multispectrum\n",
     "em.MultiSpectrumVisualizer([hl_al], labels=['Experimental data'])"
@@ -727,7 +912,7 @@
    "metadata": {},
    "source": [
     "##### AreaSelection\n",
-    "The em.AreaSelection object gives the ability to draw shapes on the map and extract the average spectrum from that area. The right mouse click is used to select the points of the area"
+    "The em.AreaSelection object gives the ability to draw shapes on the map and extract the average spectrum from that area. The **right mouse click** is used to select the points of the area"
    ]
   },
   {
