file path compatible wit linux

--- a/examples/CeriumOxidationState.ipynb
+++ b/examples/CeriumOxidationState.ipynb
@@ -148,9 +148,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_ce3 = os.path.join(cdir, r'data\\ce3_edge.hdf5')\n",
+    "file_ce3 = os.path.join(cdir,'data', 'ce3_edge.hdf5')\n",
     "ce3 = em.Spectrum.load(file_ce3)\n",
-    "file_ce4 = os.path.join(cdir, r'data\\ce4_edge.hdf5')\n",
+    "file_ce4 = os.path.join(cdir, 'data', 'ce4_edge.hdf5')\n",
     "ce4 = em.Spectrum.load(file_ce4)"
    ]
   },
@@ -163,7 +163,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x22511f62440>"
+       "<matplotlib.legend.Legend at 0x2401f1fe050>"
       ]
      },
      "execution_count": 8,
