--- a/examples/DeconvolutionExample.ipynb
+++ b/examples/DeconvolutionExample.ipynb
@@ -42,9 +42,7 @@
   {
    "cell_type": "markdown",
    "id": "87d8a166-713a-4cb6-bafc-2ef7e4ce067c",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Simulation \n",
     "This part simualtes a core-loss STEM-EELS spectrum on Ce 3+. The thickness varies in different part of the map. *This section only performs the STEM-EELS simulation hence it is not very important for the deconvolution part*"
@@ -108,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_ce3 = os.path.join(os.getcwd(), r'data\\ce3_edge.hdf5')\n",
+    "file_ce3 = os.path.join(os.getcwd(), 'data', 'ce3_edge.hdf5')\n",
     "ce3 = em.Spectrum.load(file_ce3)"
    ]
   },
