fix bug dm reader

--- a/doc/CorelossExample.ipynb
+++ b/doc/CorelossExample.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "22b0e9ad-3682-4221-8324-8028e8de4f49",
    "metadata": {},
    "outputs": [
@@ -63,16 +63,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [00:13, 1177.67it/s]\n",
-      "16384it [00:38, 422.96it/s]\n",
-      "16384it [00:00, 36025.54it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Multispectrum is simulated\n"
+      "16384it [00:12, 1284.04it/s]\n",
+      "2163it [00:04, 457.08it/s]"
      ]
     }
    ],
@@ -99,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9f16e0fb-8b8f-4558-9557-61b881d7d5ec",
    "metadata": {},
    "outputs": [],
@@ -109,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1fa570a8-0233-4ce2-89ac-1205e7f86cb4",
    "metadata": {},
    "outputs": [],
@@ -119,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c80b972c-31b7-4993-89f7-d12e2c913d7d",
    "metadata": {},
    "outputs": [],
@@ -129,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b5729c2a-130e-4308-889c-10a4caf15905",
    "metadata": {},
    "outputs": [],
@@ -170,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5eea7d5a-de95-486e-9ea5-dcb6874df70a",
    "metadata": {},
    "outputs": [],
@@ -180,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f554ec0c-830d-4444-b1e3-d6476c553d31",
    "metadata": {},
    "outputs": [],
@@ -200,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a01805e5-1a89-45fe-b0dc-797d28b1af3e",
    "metadata": {},
    "outputs": [],
@@ -211,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "06770cf4-19bc-4773-be9c-0054511199be",
    "metadata": {},
    "outputs": [],
@@ -233,29 +225,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0ed77fbc-6daf-45c2-b221-820db5f3f014",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "L2 is used\n",
-      "L1 is used\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.legend.Legend at 0x19f7eb88460>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#can take a bit of time since the cross section is calculated from the tabulated GOS arrays\n",
     "fig, ax = plt.subplots(1,len(elements))\n",
@@ -274,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "537928c3-e23f-4a39-a600-21a6e3097ae3",
    "metadata": {},
    "outputs": [],
@@ -300,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "7104c1ed-5071-4cc2-9743-6ddf333b5362",
    "metadata": {},
    "outputs": [],
@@ -310,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d7e064bc-398a-418d-abab-36cf6b146b07",
    "metadata": {},
    "outputs": [],
@@ -329,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f9bbe4b1-44e6-45cd-8395-efcadc268027",
    "metadata": {},
    "outputs": [],
@@ -340,18 +313,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "b86cb936-c134-47a9-a61c-bba8d2bc35e4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#shows the model with the given paramter values. \n",
     "mod.calculate()\n",
@@ -369,18 +334,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "fa1180c0-ba37-4914-988a-1e5ba9b591a1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "cannot use analytical gradients since a convolutor is inside model\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#creates a fit object \n",
     "fit = em.LinearFitter(hl_al, mod, use_weights=True)"
@@ -388,18 +345,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "02ff9f63-799d-4165-bd3b-75b91ffec165",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "16384it [00:38, 425.11it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fit.multi_fit()"
    ]
@@ -414,29 +363,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "ec957ff7-11c6-473b-b16e-b9d94588809b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(128, 128, 8)\n",
-      "8 parameters are optimized in the fitting procedure\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 1.0, 'N K edge: 402 eV')"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# the fitted parameters can be found in .coeff_matrix attribute.\n",
     "print(fit.coeff_matrix.shape)\n",
@@ -453,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "b22a467c-baba-4916-bc8e-2830b8b426b2",
    "metadata": {},
    "outputs": [],
@@ -485,20 +415,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "3a7277a6-f30f-4ab1-9dea-8d7e0e1fe6c0",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "16384it [04:24, 61.83it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#calculates the cramer rao lower bound for the given paramter at each probe position\n",
     "crlb_Fe = fit.CRLB_map(comp_elements[3].parameters[0]) #comp_elements[3].parameters[0]: amplitude of iron edge"
@@ -506,21 +428,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "985c54c0-2e71-48b3-89d5-37f462303709",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x19f21a53790>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
     "ax.imshow(crlb_Fe)"
@@ -532,25 +443,15 @@
    "metadata": {},
    "source": [
     "### ElementalQuantification class\n",
-    "The last part shows how the ElementalQuantification class is used as workflow to get the same result. The workflow used in this example is similar to what is used in the ElementalQuantification class but this class gives some other attributes with which you can vary the workflow. For more information see the documentation or the other notebook ()"
+    "The last part shows how the ElementalQuantification class is used as workflow to get the same result. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "fc289a1d-8178-49db-bce6-25d9d1277532",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "cannot use analytical gradients since a convolutor is inside model\n",
-      "16384it [00:37, 440.47it/s]\n",
-      "16384it [00:12, 1263.80it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "settings = (E0, alpha, beta)\n",
     "quant = em.ElementalQuantification(hl, elements, edges, settings, ll=ll)\n",
@@ -561,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "59ec8335-3942-49f8-ae50-79bd4bf55de6",
    "metadata": {},
    "outputs": [],
