update setup tools

--- a/examples/CorelossExampleExtended.ipynb
+++ b/examples/CorelossExampleExtended.ipynb
@@ -494,7 +494,7 @@
    "source": [
     "##### Background component\n",
     "The linear combination of fixed powerlaws where the powers are given by rlist:\\\n",
-    "$$bg(E) = \\sum_{i=0}^n A_i E^i$$"
+    "$$bg(E) = \\sum_{i=0}^n A_i E^{-i}$$"
    ]
   },
   {
