--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "## Loading and Saving Data\n",
     "Different file formats such as *.msa*, *.dm3* and *.dm4* are supported. The Spectrum and MultiSpectrum can be saved as a *.hdf5* file. \\\n",
-    "For the *.dm3/4* files there could be a bug in the loader when the energy axis has negative values (zero loss peak). If this is bug arises then it can be fixed to put flip_sign = True in the loading function. "
+    "For the *.dm3/4* files there could be a bug in the loader when the energy axis has negative values (zero loss peak). The bug shows a non negative energy axis whereas this is expected. To solve this, the flip_sign=True should be set in the loading function "
    ]
   },
   {
