fix bug multispectrumvisualizer

--- a/examples/CorelossExample.ipynb
+++ b/examples/CorelossExample.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "22b0e9ad-3682-4221-8324-8028e8de4f49",
    "metadata": {},
    "outputs": [
@@ -63,8 +63,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [00:12, 1284.04it/s]\n",
-      "2163it [00:04, 457.08it/s]"
+      "16384it [00:13, 1186.92it/s]\n",
+      "16384it [00:39, 415.00it/s]\n",
+      "16384it [00:00, 36186.89it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multispectrum is simulated\n"
      ]
     }
    ],
@@ -91,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9f16e0fb-8b8f-4558-9557-61b881d7d5ec",
    "metadata": {},
    "outputs": [],
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1fa570a8-0233-4ce2-89ac-1205e7f86cb4",
    "metadata": {},
    "outputs": [],
@@ -111,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c80b972c-31b7-4993-89f7-d12e2c913d7d",
    "metadata": {},
    "outputs": [],
@@ -121,13 +129,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b5729c2a-130e-4308-889c-10a4caf15905",
    "metadata": {},
    "outputs": [],
    "source": [
     "hl_al = fast_align.aligned_others[0] #coreloss which is used for quantification\n",
     "ll_al = fast_align.aligned #lowloss which is used for quantification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4db1bfc7-32c0-4f51-9122-ee9c3e95d0bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x1d3b0b9e800>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "em.MultiSpectrumVisualizer([hl_al])"
    ]
   },
   {
